# zotero-project-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: build_zotero_plugin.py  zpm-helper.sh
src/zotero_project_manager/: __init__.py  __main__.py  annotations.py  bridge.py  cli.py  collections.py  config.py  diagnostics.py  exporter.py  filenames.py  gemini_notebook.py  manifest.py  metadata.py  models.py  source.py  utils.py  zotero.py
tests/: conftest.py  test_annotations.py  test_bridge.py  test_cli.py  test_collections.py  test_config.py  test_diagnostics.py  test_exporter.py  test_filenames.py  test_manifest.py  test_zotero.py
zotero-plugin/: README.md  bootstrap.js  manifest.json  native-exporter.js  preferences.css  preferences.js  preferences.xhtml  prefs.js  updates.json  zpm.js
zotero-plugin/locale/en-US/: zpm.ftl
zotero-plugin/tests/: native-exporter.test.cjs  zpm.test.cjs
