[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "zotero-project-manager"
version = "0.2.1"
description = "Export Zotero collections into clean, incremental research workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Zotero Project Manager contributors" }]
keywords = ["zotero", "research", "cli", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = ["typer>=0.12,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
zpm = "zotero_project_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_project_manager"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
