[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "zotero-project-manager"
version = "1.0.0"
description = "Export Zotero collections into clean, incremental research workspaces."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Zotero Project Manager contributors" }]
keywords = ["zotero", "research", "cli", "pdf", "annotations", "plugin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]
dependencies = ["typer>=0.12,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/sbilmis/zotero-project-manager"
Documentation = "https://github.com/sbilmis/zotero-project-manager#readme"
Issues = "https://github.com/sbilmis/zotero-project-manager/issues"
Changelog = "https://github.com/sbilmis/zotero-project-manager/blob/main/CHANGELOG.md"

[project.scripts]
zpm = "zotero_project_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_project_manager"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
